refactor: 코드래빗 리뷰사항 반영